# character-reconition-rs

./: Cargo.toml  README.md  TODO.md
model/: config.json  labels.json  weights.safetensors
src/: augment.rs  error.rs  features.rs  fonts.rs  glyph_db.rs  lib.rs  main.rs  model.rs  normalize.rs  pca.rs  train.rs
